# guile-paxos

./: .gitignore  Makefile.am  README  build-environ.in  configure.ac  guile-paxos.spec.in
src/: Makefile.am
src/paxos/: Makefile.am  client.scm  server.scm
src/paxos/client/: Makefile.am
src/paxos/misc/: Makefile.am  coroutine.scm  coroutines.scm  statemachine.scm  utils.scm
src/paxos/net/: Makefile.am  datagram-stream.scm  mcast.scm  msg-stream.scm
src/paxos/server/: Makefile.am  acceptor.scm  learner.scm  proposer.scm
src/paxos/server/db/: Makefile.am
srfi/: srfi-64.scm
tests/: Makefile.am  client  server  test-coroutines.scm  test-mcast.scm  test-stataemachine.scm  test-utils.scm
